--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8" />
-    <title>title</title>
+    <title>Excursion</title>
     <link rel="stylesheet" href="./Resources/style.css">
     <script src="https://kit.fontawesome.com/e7d53b4df1.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    
+    <h1>Discover hidden places in the world around you</h1>
+    <a href="#">Download Excursion (Coming Soon)</a>
 </body>
+
 </html>
