Complete web layout

--- a/index.html
+++ b/index.html
@@ -9,8 +9,45 @@
 </head>
 
 <body>
-    <h1>Discover hidden places in the world around you</h1>
-    <a href="#">Download Excursion (Coming Soon)</a>
+    <header>
+        <div class="header-container">
+            <h1>Discover hidden places in the world around you</h1>
+            <p><a href="#" id="download">Download Excursion (Coming Soon)</a></p>
+
+        </div>
+    </header>
+
+    <div class="vid-container">
+        <figure>
+            <video src="./Resources/IMG/excursion.mp4" autoplay></video><!--*autoplay to be added-->
+        </figure>
+    </div>
+
+    <div class="guide-container">
+        <h1>Your personal travel guide</h1>
+        <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    </div>
+
+    <div class="img-container">
+        <figure>
+            <img src="./Resources/IMG/camp.jpg" alt="a tent out in the wild">
+        </figure>
+    </div>
+
+    <footer>
+        <div class="ads">
+            <div class="img-container2">
+                <figure>
+                    <img id="phone" src="./Resources/IMG/phone.png" alt="a phone icon">
+                </figure>
+            </div>
+
+            <h1>Coming Soon for iPhone and Android</h1>
+            <p><a href="#" id="download">Download Excursion (Coming Soon)</a></p>
+            <p id="copyright">&copy; Excursion</p>
+        </div>
+
+    </footer>
 </body>
 
 </html>
