Complete web layout

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="vid-container">
         <figure>
-            <video src="./Resources/IMG/excursion.mp4" autoplay></video><!--*autoplay to be added-->
+            <video src="./Resources/IMG/excursion.mp4" controls autoplay></video><!--*autoplay to be added-->
         </figure>
     </div>
 
