--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <div class="guide-container">
         <h1>Your personal travel guide</h1>
         <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+        <aside>Random writing to test</aside>
     </div>
 
     <div class="img-container">
